@@ -9,6 +9,7 @@ Changes:
  [D] Search notifications moved to main window's statusbar
  [D] Better (more preserving) handling of blank lines as well as
      leading and trailing spaces when opening files
+ [D] Use per-stream options in VLC preview command
  [D] Position shift amount now always defaults to zero
  [D] Fixed sensitivity of "Adjust Positions..." menu item (#7255)
  [D] Show confirmation dialog when closing file that no longer exists
